# classeviva-client

./: .gitignore  .tool-versions  Makefile  README.md  pyproject.toml  requirements-lint.txt  requirements.txt  setenv-test.sh  setup.py
.github/workflows/: ci.yml  release.yml
classeviva/: cli.py  client.py  credentials.py  model.py
cli/: classeviva
tests/: __init__.py
tests/cli/: __init__.py  test_agenda.py  test_exceptions.py  test_grades.py
tests/cli/testdata/: agenda.2022-04-05.json  grades.partial.json  identity.json
